--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,7 @@
                 </configuration>
                 <executions>
                     <execution>
+                        <phase>process-sources</phase>
                         <goals>
                             <goal>check</goal>
                         </goals>
