--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.malt.multilaunch.ui.UltiLauncher</mainClass>
+                                    <mainClass>com.malt.multilaunch.ui.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
