--- a/pom.xml
+++ b/pom.xml
@@ -14,27 +14,33 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <argLine>--enable-native-access=ALL-UNNAMED</argLine>
 
-        <logback.version>1.5.13</logback.version>
-        <junit-jupiter.version>5.9.0</junit-jupiter.version>
+        <airline.version>3.2.0</airline.version>
         <assertj-core.version>3.23.1</assertj-core.version>
+        <commons-lang3.version>3.19.0</commons-lang3.version>
+        <jackson.version>2.20.0</jackson.version>
+        <jna.version>5.18.1</jna.version>
+        <jnativehook.version>2.0.2</jnativehook.version>
+        <junit-jupiter.version>5.9.0</junit-jupiter.version>
+        <logback.version>1.5.13</logback.version>
         <mockito.version>4.8.0</mockito.version>
+        <guice.version>7.0.0</guice.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.20.0</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.19.0</version>
+            <version>${commons-lang3.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.rvesse</groupId>
             <artifactId>airline</artifactId>
-            <version>3.2.0</version>
+            <version>${airline.version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -44,18 +50,25 @@
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna</artifactId>
-            <version>5.18.1</version>
+            <version>${jna.version}</version>
         </dependency>
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna-platform</artifactId>
-            <version>5.18.1</version>
+            <version>${jna.version}</version>
         </dependency>
         <dependency>
             <groupId>com.1stleg</groupId>
             <artifactId>jnativehook</artifactId>
-            <version>2.0.2</version>
+            <version>${jnativehook.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>${guice.version}</version>
+        </dependency>
+
+        <!--Testing only-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
