--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.malt</groupId>
     <artifactId>sunrise-jp-multilaunch</artifactId>
-    <version>2025.12.0</version>
+    <version>2025.12.1-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>25</maven.compiler.source>
